created measurement response, updated measurement and database, changed temperature to double from float